--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.3.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.15",
     "@reduxjs/toolkit": "^1.5.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -19,6 +23,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.0",
     "react-responsive": "^9.0.0-beta.4",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.1",
     "twin.macro": "^2.7.0",
@@ -46,7 +51,8 @@
     ]
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.14",
+    "@types/react-router-dom": "^5.3.1",
+    "@types/styled-components": "^5.1.15",
     "autoprefixer": "^9.8.7",
     "postcss": "^7.0.38",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.16"
