--- a/package.json
+++ b/package.json
@@ -3,31 +3,35 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@craco/craco": "^6.3.0",
+    "@craco/craco": "^6.4.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.15",
-    "@reduxjs/toolkit": "^1.5.1",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
-    "@types/react-redux": "^7.1.7",
-    "@types/react-responsive": "^8.0.3",
+    "@fortawesome/react-fontawesome": "^0.1.16",
+    "@reduxjs/toolkit": "^1.6.2",
+    "@testing-library/jest-dom": "^5.15.0",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.11.6",
+    "@types/react": "^17.0.33",
+    "@types/react-dom": "^17.0.10",
+    "@types/react-redux": "^7.1.20",
+    "@types/react-responsive": "^8.0.4",
+    "autoprefixer": "^9.8.8",
+    "postcss": "^7.0.39",
     "react": "^17.0.2",
     "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.2",
-    "react-redux": "^7.2.0",
+    "react-redux": "^7.2.6",
     "react-responsive": "^9.0.0-beta.4",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "styled-components": "^5.3.1",
-    "twin.macro": "^2.7.0",
-    "typescript": "~4.1.5"
+    "sass": "^1.43.4",
+    "styled-components": "^5.3.3",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
+    "twin.macro": "^2.8.1",
+    "typescript": "~4.4.4"
   },
   "scripts": {
     "start": "craco start",
@@ -51,10 +55,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.3.1",
-    "@types/styled-components": "^5.1.15",
-    "autoprefixer": "^9.8.7",
-    "postcss": "^7.0.38",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.16"
+    "@types/react-router-dom": "^5.3.2",
+    "@types/styled-components": "^5.1.15"
   }
 }
