--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-scripts": "4.0.3",
     "sass": "^1.43.4",
     "styled-components": "^5.3.3",
+    "swiper": "6.8.4",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "twin.macro": "^2.8.1",
     "typescript": "~4.4.4"
