--- a/package.json
+++ b/package.json
@@ -59,5 +59,17 @@
   "devDependencies": {
     "@types/react-router-dom": "^5.3.2",
     "@types/styled-components": "^5.1.15"
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app), using the [Redux](https://redux.js.org/) and [Redux Toolkit](https://redux-toolkit.js.org/) template.",
+  "main": "craco.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/PiotrekNie/company-page_mern.git"
+  },
+  "author": "Piotr Niemirski",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/PiotrekNie/company-page_mern/issues"
+  },
+  "homepage": "/"
 }
