--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-redux": "^7.2.6",
     "react-responsive": "^9.0.0-beta.4",
     "react-router-dom": "^5.3.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "4.0.3",
     "sass": "^1.43.4",
     "styled-components": "^5.3.3",
@@ -58,6 +59,7 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.3.2",
+    "@types/react-router-hash-link": "^2.4.4",
     "@types/styled-components": "^5.1.15"
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app), using the [Redux](https://redux.js.org/) and [Redux Toolkit](https://redux-toolkit.js.org/) template.",
